# brainfuck-jit

./: .gitignore  Makefile  README.md  brainfuck.c  hello.bf  long.bf  simple.bf
lightning/: .gitignore  ChangeLog  Makefile.in  THANKS  aclocal.m4  config.h.in  configure  configure.ac  lightning.h  lightningize.in
lightning/build-aux/: config.guess  config.sub  depcomp  help2man  lightning.m4  mdate-sh  missing  texi2dvi  texinfo.tex
lightning/doc/: Makefile.in  lightningize.1  p-lightning.texi  porting.texi  u-lightning.texi  version.texi
lightning/lightning/: Makefile.in  core-common.h  fp-common.h  funcs-common.h
lightning/lightning/i386/: asm-64.h  asm.h  core-32.h  core-64.h  core.h  funcs.h
lightning/lightning/ppc/: asm.h  core.h  fp.h  funcs.h
lightning/lightning/sparc/: asm.h  core.h  fp.h  funcs.h
lightning/opcode/: Makefile.am  Makefile.in  bfd.h  dis-buf.c  disass.c  i386-dis.c  i386.h  sparc-dis.c  sparc-opc.c  sparc.h
lightning/tests/: 3to2.c  3to2.ok  Makefile.am  Makefile.in  add.c  allocai.c  bp.c  fib.c  fibdelay.c  fibit.c  funcfp.c  incr.c  ldst.c  printf.c  printf2.c  rpn.c  rpnfp.c  run-test  sete.c  sete.ok  testfp.c
